tests/semantic/pass/assignvoid_ptr2normal_ptr.c
int main(void) {
  int *iptr;
  void *vptr;
  iptr = vptr;
}
