tests/semantic/fail/multiplication_bad_lhs.c
int main(void) {
  int *iptr;
  return iptr*2;
}
